--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -42,26 +42,31 @@
             border-radius: 4px;
             cursor: pointer;
         }
+        .fieldError {
+            color: red;
+            font-weight: bold;
+        }
     </style>
 </head>
 <body>
 <div class="register-container">
     <h2>회원가입</h2>
-    <form th:action="@{/register}" method="post">
+    <form th:action="@{/register}" th:object="${userDTO}" method="post">
         <div class="form-group">
-            <input type="text" name="username" placeholder="아이디" required>
+            <p th:if="${#fields.hasErrors('username')}" th:errors="*{username}" class="fieldError"></p>
+            <input type="text" th:field="*{username}" placeholder="유저이름">
         </div>
         <div class="form-group">
-            <input type="password" name="password" placeholder="비밀번호" required>
+            <p th:if="${#fields.hasErrors('nickname')}" th:errors="*{nickname}" class="fieldError"></p>
+            <input type="text" th:field="*{nickname}" placeholder="닉네임">
         </div>
         <div class="form-group">
-            <input type="password" name="confirmPassword" placeholder="비밀번호 확인" required>
+            <p th:if="${#fields.hasErrors('password')}" th:errors="*{password}" class="fieldError"></p>
+            <input type="password" th:field="*{password}" placeholder="비밀번호">
         </div>
         <div class="form-group">
-            <input type="email" name="email" placeholder="이메일" required>
-        </div>
-        <div class="form-group">
-            <input type="text" name="name" placeholder="이름" required>
+            <p th:if="${#fields.hasErrors('email')}" th:errors="*{email}" class="fieldError"></p>
+            <input type="text" th:field="*{email}" placeholder="이메일">
         </div>
         <button type="submit" class="register-btn">가입하기</button>
     </form>
