--- a/src/main/resources/templates/board.html
+++ b/src/main/resources/templates/board.html
@@ -45,6 +45,7 @@
         <a href="/">홈</a>
         <a href="/login">로그인</a>
         <a href="/board_write">글쓰기</a>
+        <a href="#">마이페이지</a>
     </nav>
     <h1>게시판</h1>
     <table>
