--- a/src/main/resources/templates/board.html
+++ b/src/main/resources/templates/board.html
@@ -58,11 +58,11 @@
             </tr>
         </thead>
         <tbody>
-            <tr>
-                <td>1</td>
-                <td>첫 번째 게시글</td>
-                <td>2024-01-23</td>
-                <td>120</td>
+            <tr th:each="board : ${boardList}">
+                <td th:text="${board.id}"></td>  <!-- 게시글 번호 -->
+                <td th:text="${board.title}"></td>  <!-- 게시글 제목 -->
+                <td th:text="${board.createdAt}"></td>  <!-- 게시글 생성 날짜 -->
+                <td th:text="${board.views}"></td>  <!-- 게시글 조회수 -->
             </tr>
         </tbody>
     </table>
