--- a/src/main/resources/templates/board.html
+++ b/src/main/resources/templates/board.html
@@ -45,6 +45,7 @@
         <a href="/">홈</a>
         <a href="/login">로그인</a>
         <a href="/board_write">글쓰기</a>
+        <a href="/register">가입</a>
         <a href="#">마이페이지</a>
     </nav>
     <h1>게시판</h1>
@@ -60,9 +61,11 @@
         <tbody>
             <tr th:each="board : ${boardList}">
                 <td th:text="${board.id}"></td>  <!-- 게시글 번호 -->
-                <td th:text="${board.title}"></td>  <!-- 게시글 제목 -->
-                <td th:text="${board.createdAt}"></td>  <!-- 게시글 생성 날짜 -->
-                <td th:text="${board.views}"></td>  <!-- 게시글 조회수 -->
+                <td>
+                    <a th:href="@{'/board/' + ${board.id}}" th:text="${board.title}"></a>
+                </td>  <!-- 게시글 제목 -->
+                <td th:text="${board.getFormattedCreatedAt()}"></td>  <!-- 게시글 생성 날짜 -->
+                <td th:text="${board.viewCount}"></td>  <!-- 게시글 조회수 -->
             </tr>
         </tbody>
     </table>
