spring security 적용 및 로그인 성공 시 로그 띄우기

--- a/src/main/resources/templates/board.html
+++ b/src/main/resources/templates/board.html
@@ -46,7 +46,9 @@
         <a href="/login">로그인</a>
         <a href="/board_write">글쓰기</a>
         <a href="/register">가입</a>
-        <a href="#">마이페이지</a>
+        <a href="/mypage">마이페이지</a>
+        <p th:text="role"></p>
+        <p th:text="id"></p>
     </nav>
     <h1>게시판</h1>
     <table>
