--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -51,7 +51,7 @@
 <body>
 <div class="login-container">
     <h2>로그인</h2>
-    <form th:action="@{/login}" method="post">
+    <form th:action="@{/loginProc}" method="post">
         <div class="form-group">
             <input type="text" name="username" placeholder="아이디" required>
         </div>
