--- a/src/main/resources/templates/board.html
+++ b/src/main/resources/templates/board.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
+<html xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/extras/spring-security" lang="kr">
 <head>
     <meta charset="UTF-8">
     <title>간단한 게시판</title>
@@ -41,39 +41,46 @@
     </style>
 </head>
 <body>
-    <nav>
-        <a href="/">홈</a>
-        <a href="/login">로그인</a>
-        <a href="/board_write">글쓰기</a>
-        <a href="/register">가입</a>
-        <a href="/mypage">마이페이지</a>
-        <p th:text="role"></p>
-        <p th:text="id"></p>
-    </nav>
-    <h1>게시판</h1>
-    <table>
-        <thead>
-            <tr>
-                <th>번호</th>
-                <th>제목</th>
-                <th>생성 날짜</th>
-                <th>조회수</th>
-            </tr>
-        </thead>
-        <tbody>
-            <tr th:each="board : ${boardList}">
-                <td th:text="${board.id}"></td>  <!-- 게시글 번호 -->
-                <td>
-                    <a th:href="@{'/board/' + ${board.id}}" th:text="${board.title}"></a>
-                </td>  <!-- 게시글 제목 -->
-                <td th:text="${board.getFormattedCreatedAt()}"></td>  <!-- 게시글 생성 날짜 -->
-                <td th:text="${board.viewCount}"></td>  <!-- 게시글 조회수 -->
-            </tr>
-        </tbody>
-    </table>
+<nav>
+    <a href="/">홈</a>
+    <span sec:authorize="isAnonymous()">
+            <a href="/login">로그인</a>
+            <a href="/register">가입</a>
+        </span>
+    <span sec:authorize="isAuthenticated()">
+            <a href="/board_write">글쓰기</a>
+            <a href="/mypage">마이페이지</a>
+        <!-- 마이페이지 바로 옆에 로그아웃 버튼 배치 -->
+            <form th:action="@{/logout}" method="post" style="display:inline;">
+                <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}" />
+                <button type="submit" style="display:inline;">로그 아웃</button>
+            </form>
+        </span>
+</nav>
+<h1>게시판</h1>
+<table>
+    <thead>
+    <tr>
+        <th>번호</th>
+        <th>제목</th>
+        <th>생성 날짜</th>
+        <th>조회수</th>
+    </tr>
+    </thead>
+    <tbody>
+    <tr th:each="board : ${boardList}">
+        <td th:text="${board.id}"></td>  <!-- 게시글 번호 -->
+        <td>
+            <a th:href="@{'/board/' + ${board.id}}" th:text="${board.title}"></a>
+        </td>  <!-- 게시글 제목 -->
+        <td th:text="${board.getFormattedCreatedAt()}"></td>  <!-- 게시글 생성 날짜 -->
+        <td th:text="${board.viewCount}"></td>  <!-- 게시글 조회수 -->
+    </tr>
+    </tbody>
+</table>
 
-    <footer>
-        <p>© 2024 간단한 게시판. All rights reserved.</p>
-    </footer>
+<footer>
+    <p>© 2024 간단한 게시판. All rights reserved.</p>
+</footer>
 </body>
 </html>
