--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -54,6 +54,7 @@
     <form th:action="@{/loginProc}" method="post">
         <div class="form-group">
             <input type="text" name="username" placeholder="아이디" required>
+            <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}" />
         </div>
         <div class="form-group">
             <input type="password" name="password" placeholder="비밀번호" required>
