--- a/src/main/resources/templates/board_update.html
+++ b/src/main/resources/templates/board_update.html
@@ -2,7 +2,7 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>글 작성</title>
+    <title>글 수정</title>
     <style>
         body {
             font-family: 'Noto Sans KR', Arial, sans-serif;
