--- a/src/main/resources/templates/board_detail.html
+++ b/src/main/resources/templates/board_detail.html
@@ -28,7 +28,13 @@
             color: #666;
             display: flex;
             justify-content: space-between;
+            align-items: center;
             margin-bottom: 20px;
+        }
+        .post-meta .author{
+            margin-left: auto;
+            margin-right: 0;
+            font-weight:bold;
         }
         .button-group {
             margin-top: 50px;
@@ -93,6 +99,7 @@
     <h1 class="title" th:text="*{title}">샘플 블로그 글 제목</h1>
     <div class="post-meta">
         <span th:text="'조회수: ' + *{views}">조회수: 1,234</span>
+        <span class="author" th:text="'글쓴이:' + *{userName}">작성자</span>
         <span th:text="*{createdAt}">2024년 1월 23일</span>
     </div>
 
