게시판 조회수 로직 작성

--- a/src/main/resources/templates/board.html
+++ b/src/main/resources/templates/board.html
@@ -85,7 +85,7 @@
             <a th:href="@{'/board/' + ${board.id}}" th:text="${board.title}"></a>
         </td>  <!-- 게시글 제목 -->
         <td th:text="${board.getUsername()}"></td>
-        <td th:text="${board.viewCount}"></td>  <!-- 게시글 조회수 -->
+        <td th:text="${board.getViewCount()}"></td>  <!-- 게시글 조회수 -->
         <td th:text="${board.getFormattedCreatedAt()}"></td><!-- 게시글 생성 날짜 -->
     </tr>
     </tbody>
